style/style.css
/* ... */
body.darkTheme .mainTitle p span {
  color: var(--accentBlue);
}

body.darkTheme .sub1 {
    background-color: rgba(77, 77, 77, 0.382);
}

body.darkTheme .achievements div{
    background-color: rgba(137, 137, 137, 0.068);
}

/* CARDS */
body.darkTheme .card {
  background-color: var(--cardDark);
  box-shadow: 0 4px 10px rgba(0,0,0,0.6);
}
body.darkTheme .card:hover {
  box-shadow: 0 6px 14px rgba(0,0,0,0.8);
}
body.darkTheme .cardContent span {
  color: var(--spanGray);
}

body.darkTheme .card .projePhoto{
    opacity: 0.7;
}

body.darkTheme .langs .html {
  color: rgba(255, 179, 179, 0.788);
  background-color: rgba(74, 26, 26, 0.647);
}

body.darkTheme .langs .css {
  color: rgba(168, 197, 255, 0.945);
  background-color: rgba(63, 73, 101, 0.314);
}

body.darkTheme .langs .js {
  color: rgba(255, 217, 140, 0.814);
  background-color: rgba(79, 68, 45, 0.686);
}


/* FOOTER */
body.darkTheme footer {
  background-color: rgb(20, 20, 20);
  border-top: 2px solid rgb(40, 40, 40);
}

body.darkTheme footer .connect .icon{
    padding: 5px 0;
    border-radius: 10px;
    background-color: #fff;
}



@media (max-width:420px){

    header nav {
        padding: 15px;
    }

    header nav .logo h2{
        font-size: 18px;
    }

    header nav .logo h2 span{
        font-size: 22px;
    }

    header nav .links .homeBtn,
    nav .links .aboutBtn{
        display: none;
    }
    
    header nav .links p:last-child{
        font-size: 12px;
    }

    header nav .allProjects i{
        font-size: 12px;
    }

    header .headerContent{
        gap: 50px;
        height: 1400px;
    }

    .headerContent h1{
        font-size: 35px;
    }

    .headerContent h2{
        font-size: 23px;
    }

    .headerContent p{
        font-size: 15px;
        line-height: 23px;
        word-spacing: 3px;
        color: var(--spanGray);
    }

    .headerButtons{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: fit-content;
        margin-top: 20px;
    }

    .headerButtons p:first-child{
        padding: 10px 0;
        width: 90%;
        height: 30px;
    }

    .headerButtons p:first-child{
        color: white !important;
    }

    .headerButtons p:last-child{
        padding: 10px 0;
        width: 90%;
        height: 30px;

    }

    .achievements{
        flex-direction: column;
        align-items: center;
        height: 650px;
        width: 380px;
        gap: 30px;
        margin-top: 30px;
    }

    .achievements div{
        width: 90%;
        height: 200px;
    }

    .achievements div h2{ 
        font-size: 35px;
        margin-bottom: 0px;
    }
 
    .achievements div p{
        font-size: 18px;
        color: black;
    }

    .achievements div span{
        font-size: 15px;
    }

    .backToTop {
        position: fixed;
        bottom: 30px;
        right: 30px;
        background: linear-gradient(to right, rgb(80, 80, 255), rgba(74, 34, 175, 0.822),rgba(147, 45, 175, 0.625));
        color: white;
        border: none;
        border-radius: 50%;
        padding: 10px;
        cursor: pointer;
        font-size: 20px;
        opacity: 0;
        pointer-events: none;
        transition: opacity 0.3s ease, transform 0.3s ease;
        animation: backToTop 2s infinite ease-in-out;
        z-index: 333;
    }

    main .projectCards{
        height: fit-content !important;
        max-width: 400px !important;
        display: flex;
        flex-direction: column !important;
        justify-content: left !important;
        align-items: center !important;
        gap: 60px;
        padding: 0;
    }

    .projectCards .card {
        max-height: fit-content !important;
        min-height: 300px;
        gap: 20px;
        /* transform: translateX(-12px) !important; */
        min-width: 97% !important;
        max-width: 98% !important;
    }

    .projePhoto {
        height: fit-content !important;
        display: flex;
        justify-content: center !important;
        align-items: center !important;
    }

    .projectCards .card .projePhoto img{
        width: 90%;
        height: 150px !important;
        margin: 0 !important;
    } 
    
    .card .cardContent a{
        width: 100px;
        color: rgb(0, 0, 238);
    }

    main{
        display: flex;
        flex-direction: column;
        gap: 30px;
    }

    main .mainTitle{
        font-size: 20px;
    }   
    
    main .mainTitle p{
        font-size: 15px;
        line-height: 23px;
        word-spacing: 3px;
        color: var(--spanGray);
    }

    footer{
        padding: 10px;
        display: flex;
        flex-wrap: wrap;
        gap: 0;
        transform: translate(0);
        height: 1100px;
        justify-content: space-between;
    }

    footer .description{
        width: 400px;
        margin: 0;
    }

    .quickLinks{
        padding: 10px;
        width: 400px !important;
        margin-left: 0px;
    }

    .quickLinks ul{
        gap: 0;
        padding: 0;
        margin-left: 30px;
    }

    .connect{
        padding: 10px;
        width: 400px !important;
        margin-left: 0px;
    }

    .rights{
        flex-wrap: wrap;
    }

    .ouner{
        box-sizing: border-box;
        padding-left: 20px;
        height: fit-content;
        text-align: center;
    }
    .rightLikns{
        gap: 0;
        padding: 0;
        height: fit-content;
    }

    .rightLikns ul{
        display: flex;
        padding: 0;
        height: fit-content;
        justify-content: center;
        gap: 13px !important;
        flex-wrap: wrap;
    }

    .rightLikns ul li{
        display: flex;
        justify-content: center;
        align-items: center;
    }

}

